--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://4amir.github.io/portfolio/'
+baseURL = 'https://aamirkhan.me'
 languageCode = 'en-us'
 title = "Pixel-perfect Pragmatist"
 theme = 'PaperMod'
